# querent

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  NOVELTY.md  README.md  pyproject.toml  train.py
configs/: config.yaml
configs/arm/: a0.yaml  a0_rope.yaml  a0_th.yaml  a0_wide.yaml  a1.yaml  a2.yaml  a3.yaml  a4_tpa.yaml  a5_remix.yaml  b1_bank.yaml  b2_regional.yaml  b3_nested.yaml
configs/data/: cifar100.yaml  cifar100_smoke.yaml
configs/experiment/: smoke_local.yaml
configs/experiment/p0/: a0.yaml  a0_rope.yaml  a0_th.yaml  a0_wide.yaml
configs/experiment/p1/: a0.yaml  a1.yaml  a2.yaml  a2_flip.yaml  a3.yaml  a3_flip.yaml
configs/experiment/p2/: a0.yaml  a4_replace.yaml  a4_res.yaml  a4_res_posbias.yaml  a5.yaml
configs/experiment/p3/: a0.yaml  b1.yaml  (+8 more)
configs/manifests/: p0.yaml  p1.yaml  p2.yaml  p3.yaml  p4.yaml  p5.yaml
configs/model/: vit_small_p16_224.yaml  vit_tiny_p4_32.yaml
configs/recipe/: cifar_200ep.yaml  overfit.yaml  smoke.yaml
docker/: Dockerfile  build_push.sh  onstart.sh.template
reports/: PROGRAM_STATE.md  README.md  analysis.md  mps_screening.csv  mps_screening.md  queue.txt  queue_done.txt
scripts/: aggregate_results.py  bench_throughput.py  check_no_secrets.sh  download_data.py  eval_corruptions.py  launch_vast.py  overfit_one_batch.py  run_queue_local.py
src/querent/: train.py
tests/: conftest.py  test_configs.py  test_diagnostics.py  test_equivalence.py  test_flip_tying.py  test_fwd_bwd.py  test_repo_hygiene.py  test_routing.py  test_sdpa_math.py  test_stats_harvest.py  test_stats_schema.py  test_vit.py
(+42 files in other folders)
