[project]
name = "querent"
version = "0.1.0"
description = "Dynamic Q/K attention for fixed-resolution ViTs — a controlled experimental program"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "lightning>=2.5,<3",
    "timm>=1.0,<2",
    "hydra-core>=1.3,<1.4",
    "omegaconf>=2.3",
    "wandb>=0.19",
    "torchmetrics>=1.4",
    "matplotlib>=3.8",
    "numpy",
    "pandas",
    "pyyaml",
    "requests",
    "tqdm",
    "rich",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "vastai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/querent"]

# Platform-split torch: mac dev boxes resolve default PyPI wheels (CPU/MPS),
# linux (the Docker image / vast.ai) resolves CUDA 12.8 wheels — one lockfile everywhere.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E741"]
